fixed header size on mobile display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,12 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+@media screen and (max-width: 678px) {
+  .display-3 {
+    font-size: 2rem;
+  }
+  .subtitle {
+    font-size: 0.8rem;
+  }
+}
